@@ -10,10 +10,9 @@ class FosfatosDetalleAction extends OnChangePropertyBaseAction{
     void execute() throws Exception{
 
         def diaTrabajoId = (String)getView().getRoot().getValue("diaTrabajo.id")
-        def diaTrabajo = SqlUtil.instance.getDiaTrabajo(diaTrabajoId)
         String horaS = (String)getView().getValue("horaS")
         if (horaS)
-            getView().setValue("hora", Util.instance.toTimestamp(horaS, diaTrabajo.fecha)) 
+            getView().setValue("hora", SqlUtil.instance.obtenerFecha(horaS, diaTrabajoId))
 
         BigDecimal cteN1         = (BigDecimal)getView().getRoot().getValue("cteN1")
         BigDecimal cteN2         = (BigDecimal)getView().getRoot().getValue("cteN2")
