@@ -10,10 +10,10 @@ class JugoDetalleAction extends OnChangePropertyBaseAction{
 
     void execute() throws Exception{
 
-        def diaTrabajo = SqlUtil.instance.getDiaTrabajo(getView().getRoot().getValue("diaTrabajo.id"))
+        def diaTrabajoId = (String)getView().getRoot().getValue("diaTrabajo.id")
         String horaS = (String)getView().getValue("horaS")
         if (horaS)
-            getView().setValue("hora", Util.instance.toTimestamp(horaS, diaTrabajo.fecha)) 
+            getView().setValue("hora", SqlUtil.instance.obtenerFecha(horaS, diaTrabajoId)) 
         BigDecimal jeBri = (BigDecimal)getView().getValue("jeBri")
         BigDecimal jePol = (BigDecimal)getView().getValue("jePol")
         if (jeBri && jePol)
