@@ -19,8 +19,8 @@ class BagazoTest extends ModuleTestBase {
         execute("Collection.new"   , "viewObject=xava_view_section0_detalle")
         assertDialog()
 
-        setValue("horaS"           , "06:00")
-        assertValue("hora"         , "07/08/2019 06:00")
+        setValue("horaS"           , "08:00")
+        assertValue("hora"         , "07/08/2019 08:00")
         setValue("wH2O"            , "3000")
         setValue("wBagazo"         , "300")
         setValue("brixExtracto"    , "0.29")
