@@ -19,8 +19,8 @@ class CanaTest extends ModuleTestBase {
         assertCollectionRowCount("detalle1", 0) // La colección esta vacía 
         execute("Collection.new"   , "viewObject=xava_view_section0_detalle1")
         assertDialog()
-        setValue("horaS"           , "06:00")
-        assertValue("hora"         , "07/08/2019 06:00")
+        setValue("horaS"           , "08:00")
+        assertValue("hora"         , "07/08/2019 08:00")
         setValue("wH2O"            , "2400")
         setValue("wCana"           , "800")
         setValue("brixExtracto"    , "4.46")
@@ -49,10 +49,10 @@ class CanaTest extends ModuleTestBase {
         setValue("horaDesde"       , "07/08/2019 06:00")
         setValue("horaSH"          , "11:00")
         setValue("horaHasta"       , "07/08/2019 11:00")
-        assertValue("porcHumedad"  , "66.43")
+        assertValue("porcHumedad"  , "66.60")
         setValue("brixExtracto"    , "3.1")
         assertValue("brix"         , "11.55")
-        assertValue("porcFibra"    , "22.02")
+        assertValue("porcFibra"    , "21.85")
         setValue("polExtracto"     , "5.05")
         assertValue("polReal"      , "1.30")
         assertValue("porcSacarosa" , "4.84")
