@@ -15,7 +15,7 @@ class ParametroTest extends ModuleTestBase {
         
         assertEquals((String)new Parametro().obtenerValor("CTO24H_FACTOR_FELINING"), "0.997")
         assertEquals((String)new Parametro().obtenerValor("CTO24H_FR"), "0.641")
-        assertEquals((String)new Parametro().obtenerValor("DIA_TRABAJO_UN_REGISTRO"), "S")
+        //assertEquals((String)new Parametro().obtenerValor("DIA_TRABAJO_UN_REGISTRO"), "S")
     }
 
 }
